modules/tests/_kubernetes-policy/fixtures/workloads/media-local-pv-trailing-slash/resources.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
  name: media-sabnzbd
spec:
  accessModes:
  - ReadWriteOnce
  capacity:
    storage: 5Gi
  claimRef:
    name: media-sabnzbd
    namespace: media
  local:
    path: /srv/media/data/library/
  nodeAffinity:
    required:
      nodeSelectorTerms:
      - matchExpressions:
        - key: kubernetes.io/hostname
          operator: In
          values:
          - compute-1
  persistentVolumeReclaimPolicy: Retain
  storageClassName: ''
  volumeMode: Filesystem
